--- a/daftar game.html
+++ b/daftar game.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header> 
-        <div class="logo"><b> HRY </b>
-        </div>
-        <div class="navbar">
+        <nav class="logo"><b> HRY </b>
+        </nav>
+        <nav class="navbar">
             <ul>
-               <li> <a href="Home.html" style="color: whitesmoke"> Home </a> </li>
-               <li> <a href="Games.html" style="color: whitesmoke"> Games </a> </li>
-               <li> <a href="Esport.html" style="color: whitesmoke"> Esport </a> </li>
+               <li> <a href="Home.html" > Home </a> </li>
+               <li> <a href="Games.html" > Games </a> </li>
+               <li> <a href="Esport.html" > Esport </a> </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <br>
     <main>
